--- a/Tugas.html
+++ b/Tugas.html
@@ -48,8 +48,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt harum rem minus distinctio sunt! Incidunt voluptatibus quis laudantium voluptas, odit dignissimos aliquam eaque corporis. Suscipit eligendi dolorem facilis nihil nobis!</p>
             </div>
             <div class="dua">
-                <h1>Kontak</h1>
-                <p>022-7100124 || kampus@ars.ac.id</p>
+               <h2>Prestasi Dosen</h2>
+      <ul>
+        <li>Ina Najiyah</li>
+        <li>Sari Susanti</li>
+        <li>Asti Herliani</li>
+        <li>Iedam Fardian</li>
+        <li>Jurusan TI dan SI keren bgt</li>
+      </ul>
             </div>
         </div>
         <div class="clearfix"></div>
