--- a/Tugas.html
+++ b/Tugas.html
@@ -31,11 +31,14 @@
                 <h1>Teknik Informatika</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta non illum voluptas saepe corporis accusantium dolorum esse repudiandae error neque ex, eius sapiente vero aperiam ullam corrupti placeat! Laboriosam?</p>
             </div>
-            <div class="dua">
-                <h1>Pilihan Kelas</h1>
+            <div class="dua3">
+                <h1>Prestasi dosen</h1>
                 <ul>
-                    <li>Reguler</li>
-                    <li>Karyawan</li>
+                    <li>Ina Najiyah</li>
+                 <li>Sari Susanti</li>
+                 <li>Asti Herliani</li>
+                 <li>Iedam Fardian</li>
+                  
 
                 </ul>
             </div>
@@ -47,14 +50,11 @@
                 <h1>Sistem Informasi</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt harum rem minus distinctio sunt! Incidunt voluptatibus quis laudantium voluptas, odit dignissimos aliquam eaque corporis. Suscipit eligendi dolorem facilis nihil nobis!</p>
             </div>
-            <div class="dua">
+            <div class="dua3">
                <h2>Prestasi Dosen</h2>
       <ul>
-        <li>Ina Najiyah</li>
-        <li>Sari Susanti</li>
-        <li>Asti Herliani</li>
-        <li>Iedam Fardian</li>
-        <li>Jurusan TI dan SI keren bgt</li>
+      <li>Jurusan TI dan SI keren bgt</li>
+        
       </ul>
             </div>
         </div>
