--- a/Tugas.html
+++ b/Tugas.html
@@ -24,10 +24,13 @@
                 </ul>
             </div>
         <div class="konten">
-            <div class="satu">
+          <div class="satu">
                 <img src="https://ars.ac.id/img-release/kickstart-program-kedaireka-industri-rumah-tangga-dan-usaha-mikro-irt-um-2024-ars-university-dan-sosialisasi-program-dana-padanan-2025" alt="">
+                  <h1>Jurusan TI</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta non illum voluptas saepe corporis accusantium dolorum esse repudiandae error neque ex, eius sapiente vero aperiam ullam corrupti placeat! Laboriosam?</p>
             </div>
             <div class="dua">
+                <img src="https://tse4.mm.bing.net/th?id=OIP.XglyfUenyR33Zhqy2pgOPgHaD4&pid=Api&P=0&h=180" alt="">
                 <h1>Teknik Informatika</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta non illum voluptas saepe corporis accusantium dolorum esse repudiandae error neque ex, eius sapiente vero aperiam ullam corrupti placeat! Laboriosam?</p>
             </div>
@@ -43,10 +46,13 @@
                 </ul>
             </div>
             <div class="satu clearfix">
-                <img src="images.jpeg" alt="">
+               <img src="https://ars.ac.id/img-release/kickstart-program-kedaireka-industri-rumah-tangga-dan-usaha-mikro-irt-um-2024-ars-university-dan-sosialisasi-program-dana-padanan-2025" alt="">
+                  <h1>Jurusan Informatika</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam soluta non illum voluptas saepe corporis accusantium dolorum esse repudiandae error neque ex, eius sapiente vero aperiam ullam corrupti placeat! Laboriosam?</p>
 
             </div>
             <div class="dua">
+                <img src="https://tse4.mm.bing.net/th?id=OIP.XglyfUenyR33Zhqy2pgOPgHaD4&pid=Api&P=0&h=180" alt="">
                 <h1>Sistem Informasi</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt harum rem minus distinctio sunt! Incidunt voluptatibus quis laudantium voluptas, odit dignissimos aliquam eaque corporis. Suscipit eligendi dolorem facilis nihil nobis!</p>
             </div>
